--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "."
-title: "Title of My Final Project"
+title: "Final Project"
 description: |
   Title of My Final Project
 output_dir: "docs"
@@ -11,4 +11,5 @@ navbar:
       href: about.html
     - text: "Sources"
       href: sources.html
+      menu :
 output: distill::distill_article
