--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "."
-title: "Final Project"
+title: "Title of My Final Project"
 description: |
   Title of My Final Project
 output_dir: "docs"
@@ -10,6 +10,9 @@ navbar:
     - text: "About"
       href: about.html
     - text: "Sources"
-      href: sources.html
-      menu :
+      menu:
+        - text: "Source A"
+          href: source_A.html
+        - text: "Source B"
+          href: source_B.html
 output: distill::distill_article
